5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1861_2180.log
== TEST (2019-06-26 18:59:49) 
-- CODE:
from numpy import*

m=int(input("matriz quadrada:"))
mat=zeros((n,n),dtype=int)
for i in range(0,n):
	for j in range(0,n):
		mat[i,j]=max(i,j)-1
print(mat)

i=0
j=0



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:02:47) 
-- CODE:
from numpy import*

m=array(ieval(input("matriz quadrada:"))
mat=zeros((n,n),dtype=int)
for i in range(0,n):
	for j in range(0,n):
		mat[i,j]=max(i,j)-1
print(mat)

i=0
j=0
-- ERROR:
File "XXXX", line 4
    mat=zeros((n,n),dtype=int)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:03:01) 
-- CODE:
from numpy import*

m=array(ieval(input("matriz quadrada:"))
mat=zeros((n,n),dtype=int)
for i in range(0,n):
	for j in range(0,n):
		mat[i,j]=max(i,j)-1
print(mat)
-- ERROR:
File "XXXX", line 4
    mat=zeros((n,n),dtype=int)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:03:39) 
-- CODE:
from numpy import*

n=array(ieval(input("matriz quadrada:"))
mat=zeros((n,n),dtype=int)
for i in range(0,n):
	for j in range(0,n):
		mat[i,j]=max(i,j)-1
print(mat)
-- ERROR:
File "XXXX", line 4
    mat=zeros((n,n),dtype=int)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:03:50) 
-- CODE:
from numpy import*

m=array(eval(input("matriz quadrada:"))
mat=zeros((n,n),dtype=int)
for i in range(0,n):
	for j in range(0,n):
		mat[i,j]=max(i,j)-1
print(mat)
-- ERROR:
File "XXXX", line 4
    mat=zeros((n,n),dtype=int)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:04:11) 
-- CODE:
from numpy import*

m=array(eval(input("matriz quadrada:"))
mat=zeros((n,n),dtype=float)
for i in range(0,n):
	for j in range(0,n):
		mat[i,j]=max(i,j)-1
print(mat)
-- ERROR:
File "XXXX", line 4
    mat=zeros((n,n),dtype=float)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:05:00) 
-- CODE:
from numpy import*

m=array(eval(input("matriz quadrada:"))
mat=zeros((n,n),dtype=int)
i=0 
j=0
for i in range(0,n):
	for j in range(0,n):
		mat[i,j]=max(i,j)-1
print(mat)
-- ERROR:
File "XXXX", line 4
    mat=zeros((n,n),dtype=int)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:05:19) 
-- CODE:
from numpy import*

m=array(eval(input("matriz quadrada:"))
mat=ones((n,n),dtype=int)
i=0 
j=0
for i in range(0,n):
	for j in range(0,n):
		mat[i,j]=max(i,j)-1
print(mat)
-- ERROR:
File "XXXX", line 4
    mat=ones((n,n),dtype=int)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:05:36) 
-- CODE:
from numpy import*

m=array(eval(input("matriz quadrada:"))
mat=dot((n,n),dtype=int)
i=0 
j=0
for i in range(0,n):
	for j in range(0,n):
		mat[i,j]=max(i,j)-1
print(mat)
-- ERROR:
File "XXXX", line 4
    mat=dot((n,n),dtype=int)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:08:18) 
-- CODE:
from numpy import*

m=array(eval(input("matriz quadrada:"))
mat=zeros((n,n),dtype=int)
i=0 
j=0
for i in range(i,j):
	for j in range(i,j):
		mat[i+j]=max(i,j)-1
print(mat)
-- ERROR:
File "XXXX", line 4
    mat=zeros((n,n),dtype=int)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:09:55) 
-- CODE:
from numpy import*

m=array(eval(input("matriz quadrada:"))
i=0 
j=0
for i in range(i,j):
	for j in range(i,j):
		mat[i+j]=max(i+j)-1
print(mat)
-- ERROR:
File "XXXX", line 4
    i=0 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:10:07) 
-- CODE:
from numpy import*

m=array(eval(input("matriz quadrada:"))

for i in range(i,j):
	for j in range(i,j):
		mat[i+j]=max(i+j)-1
print(mat)
-- ERROR:
File "XXXX", line 5
    for i in range(i,j):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:10:35) 
-- CODE:
from numpy import*

m=array(eval(input("matriz quadrada:"))

for i in range(0,n):
	for j in range(0,n):
		mat[i+j]=max(i+j)-1
print(mat)
-- ERROR:
File "XXXX", line 5
    for i in range(0,n):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:13:02) 
-- CODE:
from numpy import*

m=array(eval(input(""))
vet=zeros(m[0],dtype=int)
		  
for i in range([0]):
	for j in range(0,n):
		mat[i+j]=max(i+j)-1
print(mat)
-- ERROR:
File "XXXX", line 4
    vet=zeros(m[0],dtype=int)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:13:18) 
-- CODE:
from numpy import*

m=array(eval(input(""))
vet=zeros(m[0],)
		  
for i in range([0]):
	for j in range(0,n):
		mat[i+j]=max(i+j)-1
print(mat)
-- ERROR:
File "XXXX", line 4
    vet=zeros(m[0],)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:13:36) 
-- CODE:
from numpy import*

m=array(eval(input(""))
vet=zeros(n,dtype=int)
		  
for i in range([0]):
	for j in range(0,n):
		mat[i+j]=max(i+j)-1
print(mat)
-- ERROR:
File "XXXX", line 4
    vet=zeros(n,dtype=int)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-06 17:10:17) 
-- CODE:
from numpy import*

m=array(eval(input(""))
vet=zeros(,dtype=int)
		  
for i in range([0]):
	for j in range(0,n):
		mat[i+j]=max(i,j)-1
print(mat)
-- ERROR:
File "XXXX", line 4
    vet=zeros(,dtype=int)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
